add generation-issue label

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -4,6 +4,9 @@
 - name: "kind: bug"
   description: Categorizes issue or PR as related to a bug.
   color: e11d21
+- name: 'kind: generation-issue'
+  description: Categorizes issue or PR as related to the generation pipeline.
+  color: e11d21
 - name: "kind: documentation"
   description: Categorizes issue or PR as related to documentation.
   color: d4c5f9
